# src/main/java/ai/summary/transactions/domain/transaction/model/Merchant.java
@@ -1,0 +1,7 @@
+package ai.summary.transactions.domain.transaction.model;
+
+public record Merchant(
+        String name,
+        String category) {
+
+}
